    ADDED: panel splitter shows the percent values at moving
    ADDED: Copy/Move: preserve all attributes (time, owner, group)
    ADDED: viewer, print + copy actions
    ADDED: new krarc (password handling, type autodetection, writing
           out archiver error messages, step into hidden archives,...)

    FIXED: HTML tags cause problem to the searcher
    FIXED: [ 1415250 ] searching large directories, doesn't process UI events
    FIXED: search by content goes into infinite loop if the file cannot be opened
    FIXED: after exiting the pending jobs stall
    FIXED: [ 1193239 ] crash at 'Closing Current Session'
    FIXED: synchronizer is always on the top of the panels
    FIXED: [Debian: 352367] useractions with terminal output ignores configured terminal
    FIXED: last tabs are not saved, if an old config value is present
    FIXED: panel popup gets focus at opening, gives focus to panel at hiding
    FIXED: viewer, detaching tab changes 'Editing' to 'Viewing'

     I18N: Updated Spanish translation (thanks Alejandro Araiza Alvarado)
     I18N: Updated German translation
     I18N: viewer: 'Editing', 'Viewing' can be translated
     I18N: Don't omit paragraphs and close all tags in strings to avoid errors
           in translation tools (based on patch by Giuseppe Bordoni)


1.70.0 "Round Robin"
==========================
    ADDED: new splashscreen + button to disable it in the look&feel section
    ADDED: winning icons, SVGs and fixed code to use them
    ADDED: DUMMY splash screen (krusader/splash.jpg) which will be replaced
           later

  CHANGED: UserActions: addPlaceholderButton now only adds a space after
           an executable. Not after normal placeholders.

    FIXED: [ 1413503 ] detach tab shortcut changed Ctrl+Shift+D
    FIXED: [ 1407656 ] bookmark problem with identical names in different 
                       folders
    FIXED: [ 1421473 ] viewer doesn't notice that the URL was changed