@@ -1,3 +1,4 @@
+    ADDED: searcher is able to search content on remote URLs
     ADDED: panel splitter shows the percent values at moving
     ADDED: Copy/Move: preserve all attributes (time, owner, group)
     ADDED: viewer, print + copy actions
